k8s/path-apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache-app
  template:
    metadata:
      labels:
        app: apache-app
    spec:
      containers:
        - name: apache
          image: httpd:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: apache-app-service
spec:
  selector:
    app: apache-app
  ports:
    - port: 80
      targetPort: 80
