k8s/veg-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veggold
spec:
  replicas: 1
  selector:
    matchLabels:
      app: veggold
  template:
    metadata:
      labels:
        app: veggold
    spec:
      containers:
      - name: veggold
        image: vegggold:v2
        ports:
        - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: veggold-service
spec:
  type: NodePort   # Or LoadBalancer in cloud
  selector:
    app: veggold
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
