k8s/path-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-domain-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev-nginx.p7devs.com
        - dev-apache.p7devs.com
      secretName: p7devs-tls
  rules:

    # ------------------ NGINX APP ------------------
    - host: dev-nginx.p7devs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-app-service
                port:
                  number: 80

    # ------------------ APACHE APP ------------------
    - host: dev-apache.p7devs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache-app-service
                port:
                  number: 80
