k8s/veg-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: veggold-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dev-nginx.p7devs.com
    secretName: p7devs-tls
  rules:
  - host: dev-nginx.p7devs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: veggold-service
            port:
              number: 8000
